fix everything, add non-localhost client address, make ID in API response hex string
